Fixes 10370: Improved and deprecated dropdown menu alignment options
BS3 commits: 11c6ab767cab5384188a301f7c9366b212432e81

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -344,13 +344,6 @@
   .border-bottom-radius(0);
 }
 
-// Right aligned menus need alt position
-.navbar-nav.pull-right > li > .dropdown-menu,
-.navbar-nav > li > .dropdown-menu.pull-right {
-  left: auto;
-  right: 0;
-}
-
 
 // Buttons in navbars
 //
